[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["Bob Remeika <bob@ragie.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.51.2"
psycopg = "^3.2.3"
python-dotenv = "^1.0.0"
psycopg-binary = "^3.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
